--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -302,17 +302,17 @@
   }
 
   .list {
-    max-height: 50vh;
-    overflow-y: auto;
+    max-height: 50vh; /* Keep this as is */
+    overflow-y: auto;  /* Ensure the list can scroll */
     overflow-x: hidden;
-    padding: 0rem;
+    padding: 0;
     margin: 0 auto;
-    width: 1100%;
-}
+    width: 100%; /* Use a percentage less than 100% for better centering */
+  }
 
 .list .header-row {
     display: grid;
-    grid-template-columns: 0.3fr 3fr 3.8fr 0.1fr;
+    grid-template-columns: 6.9fr 7fr .7fr 0.2fr;
     color: #dddcdc;
     margin-top: 1rem;
     position: sticky;
@@ -329,12 +329,33 @@
 }
 
 
-  .tracks {
-    margin: 0 1rem;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 5rem;
-    padding-right: 91%;
+.tracks {
+  max-height: 60vh;
+  overflow-y: auto; /* This enables vertical scrolling */
+  margin: 0 1rem;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 5rem;
+  padding-right: 0; /* Adjust padding as needed */
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: #555 #1a1a1a; /* Thumb and track color for Firefox */
+}
+
+  .tracks::-webkit-scrollbar {
+    width: 8px;
+  }
+  .tracks::-webkit-scrollbar-track {
+    background: #1a1a1a; /* Track color */
+    border-radius: 10px;
+  }
+  .tracks::-webkit-scrollbar-thumb {
+    background-color: #555; /* Scrollbar color */
+    border-radius: 10px;
+    border: 2px solid #1a1a1a; /* Adds padding around the thumb */
+  }
+
+  .tracks::-webkit-scrollbar-thumb:hover {
+    background-color: #777; /* Hover color */
   }
 
   .tracks .row {
