--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -18,7 +18,7 @@
 
     display: grid;
     grid-template-columns: 5vw 85vw;
-    height: 100%;
+    height: calc(100vh - [header-height] - [footer-height]); /* Adjust based on header/footer heights */
     width: 100%;
     background: linear-gradient(transparent, rgba(0, 0, 0, 1));
     background-color: rgba(32, 87, 100, 1);
@@ -259,7 +259,7 @@
     background-color: #181818;
     color: rgb(246, 4, 4);
     text-align: center;
-    height: 5vh;
+    height: 12vh;
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -387,3 +387,94 @@
     display: flex;
     flex-direction: column;
   }
+
+
+
+/*######################################################*/
+
+/* CurrentTrack.css */
+
+.current-track-container {
+  display: flex;
+  align-items: center;
+  width: 80%; /* Adjust the percentage or use a fixed value like '300px' */
+    max-width: 300px; /* Use max-width to ensure it doesn’t grow too large */
+    height: auto; /* Adjust height if needed */
+
+}
+
+.current-track {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+
+.current-track-image img {
+  height: 50px; /* Adjust size as needed */
+  width: 50px; /* Adjust size as needed */
+  border-radius: 5px; /* Optional: adds rounded corners */
+}
+
+.current-track-info {
+  display: flex;
+  flex-direction: column;
+  gap: -5rem;
+}
+
+.current-track-info h4 {
+  color: white;
+  margin-bottom: 0.5;
+}
+
+.current-track-info h6 {
+  color: #b3b3b3; /* Fix typo: 'color #' should be 'color: #' */
+  margin-top: 0;
+}
+
+
+/*######################################################*/
+
+/* PlayerControls.css */
+
+.player-controls-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.player-controls-container svg {
+  color: #b3b3b3;
+  transition: 0.2s ease-in-out;
+}
+
+.player-controls-container svg:hover {
+  color: white;
+}
+
+.player-controls-container .state svg {
+  color: white;
+}
+
+.previous,
+.next,
+.state {
+  font-size: 2rem;
+}
+
+
+/*######################################################*/
+
+/* Volume.css */
+.volume-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center; /* Corrected typo: 'aling-content' to 'align-items' */
+}
+
+.volume-slider {
+  width: 15rem;
+  border-radius: 2rem;
+  height: 0.5rem;
+  cursor: pointer; /* Add cursor for better UX */
+}
