--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -340,7 +340,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 5rem;
-  padding-right: 0; /* Adjust padding as needed */
+  padding-right: 0; 
   scrollbar-width: thin; /* For Firefox */
   scrollbar-color: #555 #1a1a1a; /* Thumb and track color for Firefox */
 }
@@ -349,17 +349,17 @@
     width: 8px;
   }
   .tracks::-webkit-scrollbar-track {
-    background: #1a1a1a; /* Track color */
+    background: #1a1a1a;
     border-radius: 10px;
   }
   .tracks::-webkit-scrollbar-thumb {
-    background-color: #555; /* Scrollbar color */
+    background-color: #555;
     border-radius: 10px;
-    border: 2px solid #1a1a1a; /* Adds padding around the thumb */
+    border: 2px solid #1a1a1a;
   }
 
   .tracks::-webkit-scrollbar-thumb:hover {
-    background-color: #777; /* Hover color */
+    background-color: #777;
   }
 
   .tracks .row {
@@ -401,9 +401,9 @@
 .current-track-container {
   display: flex;
   align-items: center;
-  width: 80%; /* Adjust the percentage or use a fixed value like '300px' */
-    max-width: 300px; /* Use max-width to ensure it doesn’t grow too large */
-    height: auto; /* Adjust height if needed */
+  width: 80%;
+    max-width: 300px;
+    height: auto;
 
 }
 
@@ -414,9 +414,9 @@
 }
 
 .current-track-image img {
-  height: 50px; /* Adjust size as needed */
-  width: 50px; /* Adjust size as needed */
-  border-radius: 5px; /* Optional: adds rounded corners */
+  height: 50px;
+  width: 50px;
+  border-radius: 5px;
 }
 
 .current-track-info {
@@ -431,7 +431,7 @@
 }
 
 .current-track-info h6 {
-  color: #b3b3b3; /* Fix typo: 'color #' should be 'color: #' */
+  color: #b3b3b3;
   margin-top: 0;
 }
 
@@ -473,14 +473,12 @@
 .volume-container {
   display: flex;
   justify-content: flex-end;
-  align-items: center; /* Corrected typo: 'aling-content' to 'align-items' */
+  align-items: center;
 }
 
 .volume-slider {
   width: 15rem;
   border-radius: 2rem;
   height: 0.5rem;
-  cursor: pointer; /* Add cursor for better UX */
+  cursor: pointer;
 }
-
-
